Always register SpawnEvents, add spawn-limits check in LimitLogic#canSpawn